fix small icons on iPhone

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    -webkit-text-size-adjust: none;
   }
 
 body{
